Building a constructor and startGame function

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="css/style.css" rel="stylesheet" />
     <script src="scripts/game.js" async></script>
-    <title>Memory Pairs</title>
+    <title>Memory Matrix</title>
   </head>
 
   <body>
-    <h1 class="page-title">Memory Pairs</h1>
+    <h1 class="page-title">Memory Matrix</h1>
     <div class="overlay-text visible">Click to Start</div>
     <div id="game-over-text" class="overlay-text">
       GAME OVER
