Colours added to cards to allow programmer to differentiate during coding

--- a/index.html
+++ b/index.html
@@ -28,67 +28,85 @@
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: red"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: red"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: blue"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: blue"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: green"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: green"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div
+          class="card-front card-face"
+          style="background-color: yellow"
+        ></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div
+          class="card-front card-face"
+          style="background-color: yellow"
+        ></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: pink"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: pink"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div
+          class="card-front card-face"
+          style="background-color: orange"
+        ></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div
+          class="card-front card-face"
+          style="background-color: orange"
+        ></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div
+          class="card-front card-face"
+          style="background-color: violet"
+        ></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div
+          class="card-front card-face"
+          style="background-color: violet"
+        ></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: brown"></div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face"></div>
+        <div class="card-front card-face" style="background-color: brown"></div>
       </div>
     </div>
   </body>
