pexels npm data installed and logo added unstyled

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <div class="pexels-logo">
+      <a href="https://www.pexels.com">
+        <img src="https://images.pexels.com/lib/api/pexels-white.png" />
+      </a>
+    </div>
     <h1 class="page-title">Memory Matrix</h1>
     <div class="overlay-text visible">Click to Start</div>
     <div id="game-over-text" class="overlay-text">
