--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="css/style.css" rel="stylesheet" />
-    <script src="scripts/game.js" async></script>
+    <script type="module" src="scripts/game.js" async></script>
     <title>Memory Matrix</title>
   </head>
 
@@ -114,5 +114,7 @@
         <div class="card-front card-face" style="background-color: brown"></div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/pexels-api-wrapper@2.0.1/dist/pexels-api-wrapper.umd.js"></script>
+    <script type="module" src="scripts/game.js" async></script>
   </body>
 </html>
