Alt tag added to pexels logo.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="pexels-logo">
       <a href="https://www.pexels.com">
-        <img src="https://images.pexels.com/lib/api/pexels-white.png" />
+        <img src="https://images.pexels.com/lib/api/pexels-white.png" alt="pexels-logo"/>
       </a>
     </div>
     <h1 class="page-title">Memory Matrix</h1>
