--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="css/style.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+      crossorigin
+    />
     <title>Memory Matrix</title>
   </head>
 
   <body>
     <div class="pexels-logo">
       <a href="https://www.pexels.com">
-        <img src="https://images.pexels.com/lib/api/pexels-white.png" alt="pexels-logo"/>
+        <img
+          src="https://images.pexels.com/lib/api/pexels-white.png"
+          alt="pexels-logo"
+        />
       </a>
     </div>
     <h1 class="page-title">Memory Matrix</h1>
