--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
       rel="stylesheet"
-      crossorigin
     />
     <title>Memory Matrix</title>
   </head>
@@ -124,6 +123,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/pexels-api-wrapper@2.0.1/dist/pexels-api-wrapper.umd.js"></script>
-    <script type="module" src="scripts/game.js" async></script>
+    <script type="module" src="assets/scripts/game.js" async></script>
   </body>
 </html>
