fontawesome icons added to cards and favicon added to page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!--Font awesome-->
+    <script
+      src="https://kit.fontawesome.com/92ad5667f1.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!--Favicon-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <!-- Roboto font from Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
@@ -56,85 +82,99 @@
       <!-- Individual cards for the game -->
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: red"></div>
+        <div class="card-front card-face" style="background-color: red">
+          <i class="fa-solid fa-dog"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: red"></div>
+        <div class="card-front card-face" style="background-color: red">
+          <i class="fa-solid fa-dog"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: blue"></div>
+        <div class="card-front card-face" style="background-color: blue">
+          <i class="fa-solid fa-cat"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: blue"></div>
+        <div class="card-front card-face" style="background-color: blue">
+          <i class="fa-solid fa-cat"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: green"></div>
+        <div class="card-front card-face" style="background-color: green">
+          <i class="fa-solid fa-dove"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: green"></div>
+        <div class="card-front card-face" style="background-color: green">
+          <i class="fa-solid fa-dove"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div
-          class="card-front card-face"
-          style="background-color: yellow"
-        ></div>
+        <div class="card-front card-face" style="background-color: yellow">
+          <i class="fa-solid fa-horse"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div
-          class="card-front card-face"
-          style="background-color: yellow"
-        ></div>
+        <div class="card-front card-face" style="background-color: yellow">
+          <i class="fa-solid fa-horse"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: pink"></div>
+        <div class="card-front card-face" style="background-color: pink">
+          <i class="fa-solid fa-fish"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: pink"></div>
+        <div class="card-front card-face" style="background-color: pink">
+          <i class="fa-solid fa-fish"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div
-          class="card-front card-face"
-          style="background-color: orange"
-        ></div>
+        <div class="card-front card-face" style="background-color: orange">
+          <i class="fa-solid fa-spider"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div
-          class="card-front card-face"
-          style="background-color: orange"
-        ></div>
+        <div class="card-front card-face" style="background-color: orange">
+          <i class="fa-solid fa-spider"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div
-          class="card-front card-face"
-          style="background-color: violet"
-        ></div>
+        <div class="card-front card-face" style="background-color: violet">
+          <i class="fa-solid fa-otter"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div
-          class="card-front card-face"
-          style="background-color: violet"
-        ></div>
+        <div class="card-front card-face" style="background-color: violet">
+          <i class="fa-solid fa-otter"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: brown"></div>
+        <div class="card-front card-face" style="background-color: brown">
+          <i class="fa-solid fa-hippo"></i>
+        </div>
       </div>
       <div class="card">
         <div class="card-back card-face"></div>
-        <div class="card-front card-face" style="background-color: brown"></div>
+        <div class="card-front card-face" style="background-color: brown">
+          <i class="fa-solid fa-hippo"></i>
+        </div>
       </div>
     </div>
     <!-- Script tags for the game script -->
