script added to get a quote from an api

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       sizes="16x16"
       href="assets/images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Roboto font from Google Fonts -->
     <link
@@ -48,6 +47,7 @@
   </head>
 
   <body>
+    <div class="quotes-container"></div>
     <!-- Main title -->
     <h1 class="page-title">Memory Matrix</h1>
 
