html and script updated to a p element initial css

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
   </head>
 
   <body>
-    <div class="quotes-container"></div>
+    <div class="quotes-container">
+      <p class="quotes-text"></p>
+  </div>
+  
     <!-- Main title -->
     <h1 class="page-title">Memory Matrix</h1>
 
