Added style sheet link to 404 page

--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to the external stylesheet -->
+    <link href="assets/css/style.css" rel="stylesheet" >
     <title>Page Not Found</title>
   </head>
   <body>
